Finish Product but need little tweaking

--- a/calculate.html
+++ b/calculate.html
@@ -113,6 +113,15 @@
             <img src="Images/Gif/sleepycat.gif" alt="Loading">
         </div>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            setTimeout(() => {
+                window.location.href = "result.html";
+            }, 2000);
+        });
+    </script>
+    
 </body>
 </html>
 
