--- a/end.html
+++ b/end.html
@@ -75,6 +75,14 @@
         <h1>THANK YOU FOR USING<br>MY APP!</h1>
         <img src="Images/Gif/scratch.gif" alt="Scratch Effect" width="500">
     </div>
-
+    
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            setTimeout(() => {
+                window.location.href = "index.html";
+            }, 2000);
+        });
+    </script>
+    
 </body>
 </html>
